--- a/login.html
+++ b/login.html
@@ -168,7 +168,7 @@
       </div>
 
       <!-- Login form -->
-      <form>
+      <form id="loginForm">
         <input type="email" placeholder="Email" required>
         <input type="password" placeholder="Password" required>
         <button type="submit">Login</button>
@@ -181,6 +181,14 @@
 
     </div>
   </div>
+
+<script>
+  // Temporary redirect to dashboard (no backend)
+  document.getElementById("loginForm").addEventListener("submit", function(event) {
+    event.preventDefault(); // prevent actual form submission
+    window.location.href = "PlanWise.html"; // redirect to dashboard
+  });
+</script>
 
 </body>
 </html>
